changed capital TAB to Tab

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<main>
-			<div class="note"><span class="wb-inv">Note: </span>Try using arrows, home, and end keys to navigate the Accordion! Additionally, according to the <a href="https://www.w3.org/WAI/ARIA/apg/patterns/accordion/#keyboard_interaction">Pattern</a>, all headings have been made part of the TAB order.</div>
+			<div class="note"><span class="wb-inv">Note: </span>Try using arrows, home, and end keys to navigate the Accordion! Additionally, according to the <a href="https://www.w3.org/WAI/ARIA/apg/patterns/accordion/#keyboard_interaction">Pattern</a>, all headings have been made part of the Tab order.</div>
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 			<div class="container">
 			  <h1>Simple Accordions</h1>
